# scores

./: .gitattributes  .gitignore  README.md  env.sh  plot_supplier_gen_load.py  pyproject.toml  setup.py  supplier_gen_by_tech_by_half_hour.py  supplier_hh_load_by_day.py  supplier_scores.py  supplier_time_matched_scores.py
common/: snippets.py  utils.py
configuration/: conf.py  generation.yaml  grid.yaml  paths.yaml  regos.yaml  run_long_test.yaml  suppliers.yaml
core/: grid_gen_by_tech_by_month.py  supplier_gen_by_tech_by_half_hour.py  supplier_gen_by_tech_by_month.py  supplier_load_by_half_hour.py  supplier_scores.py
etl/: download_s0142.py
img/: matched-data-model.drawio
matched/connectors/: renewableandchpregister.py
matched/db/: tables.py  utils.py
matched/definitions/: renewableandchpregister.py
nbs/: 01-ofgem-roc-register.ipynb  02-era5.ipynb
plot/: plot_grid_gen.py  plot_supplier.py
publish/: supplier.py
s0142/: concatenate_days.py  parse_s0142_files.py  process_s0142_file.py  supplier_hh_load_by_day.py  supplier_hh_load_concatenated.py
s0142/tests/: test_s0142.py
scores/analytics/: rego_analysis.py
scores/common/: utils.py
scores/configuration/: conf.py  run_long_test.yaml  suppliers.yaml
scores/core/: grid_gen_by_tech_by_month.py  supplier_gen_by_tech_by_half_hour.py  supplier_gen_by_tech_by_month.py  supplier_load_by_half_hour.py  (+1 more)
scripts/: calculate_supplier_demand.py  concatenate_supplier_demand.py  historic_generation_mix.py  regos.py
workflow/: helpers.py  run.py  run_supplier_scores.py  supplier_scores.py
(+11 files in other folders)
