[tool.poetry]
name = "matched"
version = "0.1.0"
description = "Calculate time-matched scores for UK suppliers"
authors = ["Joe Kwiatkowski", "Ayrton Bourn <ayrtonbourn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
sqlmodel = "^0.0.19"
geopandas = "^1.0.1"
tqdm = "^4.66.4"
beautifulsoup4 = "^4.12.3"
openpyxl = "^3.1.5"
matplotlib = "^3.9.1"
xarray = "^2024.6.0"
netcdf4 = "^1.7.1.post1"
scipy = "^1.14.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"
black = "22.3.0"
isort = "5.10.1"
pytest = "7.1.3"
jupyterlab = "^3.6.3"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
